--- a/formulario.html
+++ b/formulario.html
@@ -6,6 +6,45 @@
     <title>formulario</title>
 </head>
 <body>
-    
+   <h1>formulario</h1>
+   <form action="https://httpbin.org/post" method="post">
+
+    <!--caja de texto para usuario-->
+    <input type="type" id="nombre" name="nombre" placeholder="Nombre"><br><br>
+
+    <!--password-->
+    <input type="password" id="clave" name="clave" placeholder="clave"><br><br>
+
+    <!--radio-->
+    <p>Genero</p>
+    <input type="radio" id="masculino" name="genero" value="masculino">
+    <label for="masculino">Masculino</label>
+    <input type="radio" id="femenino" name="genero" value="femenino">
+    <label for="femenino">Femenino</label><br><br>
+
+    <!--checkbox-->
+    <p>Intereses</p>
+    <input type="checkbox" id="musica" name="intereses" value="musica">
+    <label for="musica">Musica</label>
+    <input type="checkbox" id="Deportes" name="intereses" value="Deportes">
+    <label for="musica">Deportes</label><br><br>
+
+        <!--seleccion-->
+    <label for="carrera">Carrera</label>
+    <select name="carrera" id="carrera">
+        <option value="software">ingenieria de software</option>
+        <option value="sistema">sistemas</option>
+        <option value="redes">redes</option>
+    </select><br><br>
+
+    <label for="comentarios">comentarios</label><br>
+    <textarea name="comentario" id="comentario" rows="4"></textarea><br><br>
+   
+<input type="submit" values="enviar">
+<input type="reset" values="resetear">
+
+
+
+</form>
 </body>
 </html>
